--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="12dp"
-    tools:context=".MainActivity">
+    tools:context=".view.MainActivity">
 
     <TextView
         android:id="@+id/resultTv"
@@ -45,5 +45,13 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
         android:text="calculate"
+        android:textSize="30sp" />
+
+    <Button
+        android:id="@+id/historyBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
+        android:text="history"
         android:textSize="30sp" />
 </LinearLayout>
